--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
 
         stage('Complete') {
             steps {
-                echo "change complete"
+                echo "branched complete"
             }
         }
     }
